# FASTAPI

./: README.md  books.db  hello.py  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  schemas.py
tests/: test_main.py
