[project]
name = "qasim-fastapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "qasim", email = "qasimbeg@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.31",
    "aiosqlite>=0.20.0",
    "pytest>=8.4.1",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.8",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = [
  "."
]
